--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <p id="demo"></p>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
 <script>
 document.getElementById("demo").innerHTML = "Hello JavaScript!";
 // Create a client instance
