--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ client.onMessageArrived = onMessageArrived;
 
 // connect the client
 client.connect({onSuccess:onConnect,
-	userName : "robotKs1",
+	username : "robotKs1",
 	password : "123456789"
 	});
 
