--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@ client.onMessageArrived = onMessageArrived;
 
 // connect the client
 client.connect({onSuccess:onConnect,
-	username : "robotKs1",
-	password : "123456789"
+	userName : "robotKs1",
+	password : "123456789",
+	useSSL: false
 	});
 
 
