--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ function onConnectionLost(responseObject) {
 // called when a message arrives
 function onMessageArrived(message) {
   console.log("onMessageArrived:"+message.payloadString);
+  document.getElementById("demo").innerHTML = message.payloadString;
 }
 </script>
 
