--- a/index.html
+++ b/index.html
@@ -1,8 +1,28 @@
 <!DOCTYPE html>
+<style>
+    html, body {
+        margin: 0!important;
+        padding: 0!important;
+        overflow: hidden!important;
+        width: 100%;
+    }
+</style>
 <html>
 <body>
 
-<p id="demo"></p>
+<p id="demo"></p
+<title>Video Recording | RecordRTC</title>
+<h1>Simple Video Recording using RecordRTC</h1>
+
+<br>
+
+<button id="btn-start-recording">Start Recording</button>
+<button id="btn-stop-recording" disabled>Stop Recording</button>
+
+<hr>
+<video controls autoplay></video>
+<script src="https://cdn.webrtc-experiment.com/RecordRTC.js"></script>
+<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
 <script>
 document.getElementById("demo").innerHTML = "Hello JavaScript!";
@@ -43,6 +63,44 @@ function onMessageArrived(message) {
   console.log("onMessageArrived:"+message.payloadString);
   document.getElementById("demo").innerHTML = message.payloadString;
 }
+// video
+var video = document.querySelector('video');
+function captureCamera(callback) {
+    navigator.mediaDevices.getUserMedia({ audio: true, video: true }).then(function(camera) {
+        callback(camera);
+    }).catch(function(error) {
+        alert('Unable to capture your camera. Please check console logs.');
+        console.error(error);
+    });
+}
+function stopRecordingCallback() {
+    video.src = video.srcObject = null;
+    video.src = URL.createObjectURL(recorder.getBlob());
+    video.play();
+    recorder.camera.stop();
+    recorder.destroy();
+    recorder = null;
+}
+var recorder; // globally accessible
+document.getElementById('btn-start-recording').onclick = function() {
+    this.disabled = true;
+    captureCamera(function(camera) {
+        setSrcObject(camera, video);
+        video.play();
+        recorder = RecordRTC(camera, {
+            type: 'video'
+        });
+        recorder.startRecording();
+        // release camera on stopRecording
+        recorder.camera = camera;
+        document.getElementById('btn-stop-recording').disabled = false;
+    });
+};
+document.getElementById('btn-stop-recording').onclick = function() {
+    this.disabled = true;
+    recorder.stopRecording(stopRecordingCallback);
+};
+
 </script>
 
 <noscript>Sorry, your browser does not support JavaScript!</noscript>
