--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
 <script>
 document.getElementById("demo").innerHTML = "Hello JavaScript!";
-// Create a client instance
+/*// Create a client instance
 client = new Paho.MQTT.Client("kisradev.com", Number(1884), "/ws", "clientId1");
 
 // set callback handlers
@@ -63,6 +63,7 @@ function onMessageArrived(message) {
   console.log("onMessageArrived:"+message.payloadString);
   document.getElementById("demo").innerHTML = message.payloadString;
 }
+*/
 // video
 var video = document.querySelector('video');
 function captureCamera(callback) {
