--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@ var reader = new FileReader();
 reader.readAsDataURL(blob); 
 reader.onloadend = function() {
     base64data = reader.result;                
-    console.log(base64data );
+    //console.log(base64data );
+	message = new Paho.MQTT.Message(base64data);
+  message.destinationName = "World";
+  client.send(message);
 }
     video.src = video.srcObject = null;
     video.src = URL.createObjectURL(recorder.getBlob());
