--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
 <button id="btn-stop-recording" disabled>Stop Recording</button>
 
 <hr>
-<video controls autoplay></video>
+<video class="vii" controls autoplay></video>
+<video id="vi"controls autoplay>
+  <source src="" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
 <script src="https://cdn.webrtc-experiment.com/RecordRTC.js"></script>
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
@@ -29,7 +33,7 @@ document.getElementById("demo").innerHTML = "Hello JavaScript!";
 // Create a client instance
 client = new Paho.MQTT.Client("kisradev.com", Number(1884), "/ws", "clientId1");
 
-// set callback handlers
+// set callback handlers <video controls autoplay></video>
 client.onConnectionLost = onConnectionLost;
 client.onMessageArrived = onMessageArrived;
 
@@ -61,11 +65,12 @@ function onConnectionLost(responseObject) {
 // called when a message arrives
 function onMessageArrived(message) {
   console.log("onMessageArrived:"+message.payloadString);
-  document.getElementById("demo").innerHTML = message.payloadString;
+  //document.getElementById("demo").innerHTML = message.payloadString;
+  document.getElementById("vi").innerHTML = message.payloadString";
 }
 
 // video
-var video = document.querySelector('video');
+var video = document.querySelector('.vii');
 function captureCamera(callback) {
     navigator.mediaDevices.getUserMedia({ audio: true, video: true }).then(function(camera) {
         callback(camera);
