--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ function onConnectionLost(responseObject) {
 function onMessageArrived(message) {
   console.log("onMessageArrived:"+message.payloadString);
   //document.getElementById("demo").innerHTML = message.payloadString;
-  document.getElementById("vi").innerHTML = message.payloadString";
+  document.getElementById("vi").innerHTML = message.payloadString;
 }
 
 // video
