--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <hr>
 <video class="vii" controls autoplay></video>
-<video id="vi"controls autoplay>
+<video id="vi"controls autoplay loop>
 </video>
 <script src="https://cdn.webrtc-experiment.com/RecordRTC.js"></script>
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
