debug video size v2

--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@ document.getElementById('btn-start-recording').onclick = function() {
 			video: {
       width: 170,
       height: 144
+   },
+   canvas: {
+      width: 170,
+      height: 144
    }
         });
         recorder.startRecording();
