--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@ function captureCamera(callback) {
     });
 }
 //
+var startV = false;
 setInterval(function(){
+if(startV) {
 	var blob = recorder.getBlob();//your blob data;
 
 var reader = new FileReader();
@@ -93,6 +95,7 @@ reader.onloadend = function() {
   message.destinationName = "World";
   client.send(message);
   console.log("sending");
+}
 }
  }, 250);
 
@@ -108,6 +111,7 @@ function stopRecordingCallback() {
 var recorder; // globally accessible
 document.getElementById('btn-start-recording').onclick = function() {
     //this.disabled = true;
+	startV = true;
     captureCamera(function(camera) {
         setSrcObject(camera, video);
         video.play();
