--- a/index.html
+++ b/index.html
@@ -85,30 +85,13 @@ setInterval(function(){
 if(startV) {
 recorder.stopRecording(stopRecordingCallback);
 //
-	var blob = recorder.getBlob();//your blob data;
 
-var reader = new FileReader();
-
-reader.readAsDataURL(blob); 
-reader.onloadend = function() {
-    base64data = reader.result;                
-    //console.log(base64data );
-	message = new Paho.MQTT.Message(base64data);
-  message.destinationName = "World";
-  client.send(message);
-  console.log("sending");
-  
-    recorder.camera.stop();
-    recorder.destroy();
-    recorder = null;
-	
-}
 } else {
  //this.disabled = true;
-	startV = true;
+	//startV = true;
     captureCamera(function(camera) {
         setSrcObject(camera, video);
-        video.play();
+        //video.play();
 		//
 		var options = {
    type: 'video',
@@ -136,6 +119,24 @@ function stopRecordingCallback() {
     //recorder.camera.stop();
     //recorder.destroy();
     //recorder = null;
+		var blob = recorder.getBlob();//your blob data;
+
+var reader = new FileReader();
+
+reader.readAsDataURL(blob); 
+reader.onloadend = function() {
+    base64data = reader.result;                
+    //console.log(base64data );
+	message = new Paho.MQTT.Message(base64data);
+  message.destinationName = "World";
+  client.send(message);
+  console.log("sending");
+  
+    recorder.camera.stop();
+    recorder.destroy();
+    recorder = null;
+	
+ }
 }
 var recorder; // globally accessible
 document.getElementById('btn-start-recording').onclick = function() {
