--- a/index.html
+++ b/index.html
@@ -84,11 +84,23 @@ function captureCamera(callback) {
 var startV = false;
 setInterval(function(){
 if(startV) {
-startV = false;
-recorder.stopRecording(stopRecordingCallback);
+//startV = false;
+//recorder.stopRecording(stopRecordingCallback);
 //
+	var blob = recorder.getBlob();//your blob data;
 
-} else {
+var reader = new FileReader();
+
+reader.readAsDataURL(blob); 
+reader.onloadend = function() {
+    base64data = reader.result;                
+    //console.log(base64data );
+	message = new Paho.MQTT.Message(base64data);
+  message.destinationName = "World";
+  client.send(message);
+  console.log("sending");
+
+} /*else {
  //this.disabled = true;
 	//startV = true;
     captureCamera(function(camera) {
@@ -111,8 +123,8 @@ recorder.stopRecording(stopRecordingCallback);
 		startV = true;
     });
 }//
-//startV = !startV;
- }, 250);
+//startV = !startV;*/
+ }, 1000);
 
 //
 function stopRecordingCallback() {
@@ -122,22 +134,6 @@ function stopRecordingCallback() {
     //recorder.camera.stop();
     //recorder.destroy();
     //recorder = null;
-		var blob = recorder.getBlob();//your blob data;
-
-var reader = new FileReader();
-
-reader.readAsDataURL(blob); 
-reader.onloadend = function() {
-    base64data = reader.result;                
-    //console.log(base64data );
-	message = new Paho.MQTT.Message(base64data);
-  message.destinationName = "World";
-  client.send(message);
-  console.log("sending");
-  
-    recorder.camera.stop();
-    recorder.destroy();
-    recorder = null;
 	
  }
 }
