--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ function captureCamera(callback) {
     });
 }
 //
-var startV = true;
+var startV = false;
 setInterval(function(){
 if(startV) {
 //startV = false;
