--- a/index.html
+++ b/index.html
@@ -87,13 +87,12 @@ if(startV) {
 //startV = false;
 //recorder.stopRecording(stopRecordingCallback);
 //
-	//var blob = recorder.getBlob();//your blob data;
-	// var blob = video.srcObject = null;
-     var blob = URL.createObjectURL(recorder.getBlob());
-
+video.src = video.srcObject = null;
+    video.src = URL.createObjectURL(recorder.getBlob());
+	var blob = recorder.getBlob();//your blob data;
 var reader = new FileReader();
 
-reader.readAsArrayBuffer(blob); 
+reader.readAsDataURL(blob); 
 reader.onloadend = function() {
     base64data = reader.result;                
     //console.log(base64data );
