--- a/index.html
+++ b/index.html
@@ -84,30 +84,10 @@ function captureCamera(callback) {
 var startV = false;
 setInterval(function(){
 if(startV) {
-//startV = false;
-//recorder.stopRecording(stopRecordingCallback);
-//
-//video.src = video.srcObject = null;
-    //video.src = URL.createObjectURL(recorder.getBlob());
-	recorder.getDataURL(function(dataURL) {
-   //mediaElement.src = dataURL;
-//});
-	//var blob = recorder.getDataURL();//your blob data;
-	var blob = dataURL;
-var reader = new FileReader();
+startV = false;
+recorder.stopRecording(stopRecordingCallback);
 
-reader.readAsDataURL(blob); 
-reader.onloadend = function() {
-    base64data = reader.result;                
-    //console.log(base64data );
-	message = new Paho.MQTT.Message(base64data);
-  message.destinationName = "World";
-  client.send(message);
-  console.log("sending");
-
-}
-});
- /*else {
+ }else {
  //this.disabled = true;
 	//startV = true;
     captureCamera(function(camera) {
@@ -130,8 +110,7 @@ reader.onloadend = function() {
 		startV = true;
     });
 }//
-//startV = !startV;*/
-}
+//startV = !startV;
  }, 1000);
 
 //
@@ -142,7 +121,28 @@ function stopRecordingCallback() {
     //recorder.camera.stop();
     //recorder.destroy();
     //recorder = null;
-	
+	//
+//video.src = video.srcObject = null;
+    //video.src = URL.createObjectURL(recorder.getBlob());
+	recorder.getDataURL(function(dataURL) {
+   //mediaElement.src = dataURL;
+//});
+	//var blob = recorder.getDataURL();//your blob data;
+	var blob = dataURL;
+var reader = new FileReader();
+
+reader.readAsDataURL(blob); 
+reader.onloadend = function() {
+    base64data = reader.result;                
+    //console.log(base64data );
+	message = new Paho.MQTT.Message(base64data);
+  message.destinationName = "World";
+  client.send(message);
+  console.log("sending");
+recorder.destroy();
+    recorder = null;
+}
+});
  //}
 }
 var recorder; // globally accessible
