debug video loop v20

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ function stopRecordingCallback() {
 	//recorder.getDataURL(function(dataURL) {
    //mediaElement.src = dataURL;
 //});
-	var blob = recorder.getDataURL();//your blob data;
+	var blob = recorder.getBlob();//your blob data;
 	//var blob = dataURL;
 var reader = new FileReader();
 
