debug video loop v23

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ recorder.stopRecording(stopRecordingCallback);
  //this.disabled = true;
 	//startV = true;
     captureCamera(function(camera) {
-        setSrcObject(camera, video);
+        setSrcObject(camera);
         //video.play();
 		//
 		var options = {
