--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
 <script src="https://cdn.webrtc-experiment.com/MediaStreamRecorder.js"> </script>
+<script src="https://www.webrtc-experiment.com/AudioVideoRecorder.js"> </script>
 <script>
 document.getElementById("demo").innerHTML = "Hello JavaScript!";
 // Create a client instance
