--- a/index.html
+++ b/index.html
@@ -25,11 +25,8 @@
   <source src="">
   Your browser does not support the video tag.
 </video>
-<script src="https://cdn.webrtc-experiment.com/RecordRTC.js"></script>
-<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
 <script src="https://cdn.webrtc-experiment.com/MediaStreamRecorder.js"> </script>
-<script src="https://www.webrtc-experiment.com/AudioVideoRecorder.js"> </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
 <script>
 document.getElementById("demo").innerHTML = "Hello JavaScript!";
 // Create a client instance
@@ -72,29 +69,27 @@ function onMessageArrived(message) {
 }
 
 // audio
-  var mediaConstraints = { audio: true };
-            navigator.mozGetUserMedia(mediaConstraints, onMediaSuccess, onMediaError);
-            function onMediaSuccess(stream) {
-                // https://www.webrtc-experiment.com/AudioVideoRecorder.js
-                AudioVideoRecorder({
-                    stream: stream,
-                    mimeType: 'audio/ogg',
-                    interval: 5000,
-                    onRecordedMedia: function(blob) {
-                        var a = document.createElement('a');
-                        a.target = '_blank';
-                        a.innerHTML = 'Open Recorded Audio No. ' + (index++);
-                        a.href = URL.createObjectURL(blob);
-                        audiosContainer.appendChild(a);
-                        audiosContainer.appendChild(document.createElement('hr'));
-                    }
-                });
-            }
-            function onMediaError(e) {
-                console.error('media error', e);
-            }
-            var audiosContainer = document.getElementById('audios-container');
-            var index = 1;
+var mediaConstraints = {
+    audio: true,
+    video: true
+};
+
+navigator.getUserMedia(mediaConstraints, onMediaSuccess, onMediaError);
+
+function onMediaSuccess(stream) {
+    var mediaRecorder = new MediaStreamRecorder(stream);
+    mediaRecorder.mimeType = 'video/webm';
+    mediaRecorder.ondataavailable = function (blob) {
+        // POST/PUT "Blob" using FormData/XHR2
+        var blobURL = URL.createObjectURL(blob);
+        document.write('<a href="' + blobURL + '">' + blobURL + '</a>');
+    };
+    mediaRecorder.start(3000);
+}
+
+function onMediaError(e) {
+    console.error('media error', e);
+}
 </script>
 
 <noscript>Sorry, your browser does not support JavaScript!</noscript>
