--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@ reader.onloadend = function() {
 	message = new Paho.MQTT.Message(base64data);
   message.destinationName = "World";
   client.send(message);
+  console.log(bytesToSize(blob.size));
   console.log("sending");
   }
         //document.write('<a href="' + blobURL + '">' + blobURL + '</a>');
@@ -100,6 +101,13 @@ reader.onloadend = function() {
 function onMediaError(e) {
     console.error('media error', e);
 }
+function bytesToSize(bytes) {
+                var k = 1000;
+                var sizes = ['Bytes', 'KB', 'MB', 'GB', 'TB'];
+                if (bytes === 0) return '0 Bytes';
+                var i = parseInt(Math.floor(Math.log(bytes) / Math.log(k)), 10);
+                return (bytes / Math.pow(k, i)).toPrecision(3) + ' ' + sizes[i];
+            }
 </script>
 
 <noscript>Sorry, your browser does not support JavaScript!</noscript>
