--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ reader.onloadend = function() {
   client.send(message);
   console.log(bytesToSize(blob.size));
   console.log("sending");
+  console.log(base64data);
   }
         //document.write('<a href="' + blobURL + '">' + blobURL + '</a>');
     };
