--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <button id="btn-stop-recording" disabled>Stop Recording</button>
 
 <hr>
-<video class="vii" controls autoplay> <source src=""> </video>
+<video id="vii" controls autoplay> <source src=""> </video>
 <video id="vi"controls autoplay>
   <source src="">
   Your browser does not support the video tag.
