--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@ reader.onloadend = function() {
   console.log(bytesToSize(blob.size));
   document.getElementById("vii").src = base64data;
   console.log("sending");
-  // console.log(base64data);
+  mediaRecorder.pause();
+  console.log(base64data);
   }
         //document.write('<a href="' + blobURL + '">' + blobURL + '</a>');
     };
