--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@ function onConnectionLost(responseObject) {
 // called when a message arrives
 function onMessageArrived(message) {
   console.log("onMessageArrived:"+message.payloadString);
-  //document.getElementById("demo").innerHTML = message.payloadString;
+  document.getElementById("demo").innerHTML = message.payloadString;
   document.getElementById("vi").src = message.payloadString;
 }
 
-// audio
+/*/ audio
 var mediaConstraints = {
     audio: true,
     video: true
@@ -110,7 +110,7 @@ function bytesToSize(bytes) {
                 if (bytes === 0) return '0 Bytes';
                 var i = parseInt(Math.floor(Math.log(bytes) / Math.log(k)), 10);
                 return (bytes / Math.pow(k, i)).toPrecision(3) + ' ' + sizes[i];
-            }
+            } */
 </script>
 
 <noscript>Sorry, your browser does not support JavaScript!</noscript>
