--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ function onMessageArrived(message) {
   }
 }
 
-/*/ audio
+// audio
 var mediaConstraints = {
     audio: true,
     video: true
@@ -93,7 +93,7 @@ reader.onloadend = function() {
     base64data = reader.result;                
     //console.log(base64data );
 	message = new Paho.MQTT.Message(base64data);
-  message.destinationName = "World";
+  message.destinationName = "/video";
   client.send(message);
   console.log(bytesToSize(blob.size));
   document.getElementById("vii").src = base64data;
@@ -115,7 +115,7 @@ function bytesToSize(bytes) {
                 if (bytes === 0) return '0 Bytes';
                 var i = parseInt(Math.floor(Math.log(bytes) / Math.log(k)), 10);
                 return (bytes / Math.pow(k, i)).toPrecision(3) + ' ' + sizes[i];
-            } */
+            } 
 </script>
 
 <noscript>Sorry, your browser does not support JavaScript!</noscript>
