rec reduc size to 170-144

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@ navigator.getUserMedia(mediaConstraints, onMediaSuccess, onMediaError);
 function onMediaSuccess(stream) {
     var mediaRecorder = new MediaStreamRecorder(stream);
     mediaRecorder.mimeType = 'video/webm';
+	mediaRecorder.videoWidth  = 170;
+mediaRecorder.videoHeight = 144;
     mediaRecorder.ondataavailable = function (blob) {
         // POST/PUT "Blob" using FormData/XHR2
         var blobURL = URL.createObjectURL(blob);
@@ -103,7 +105,7 @@ reader.onloadend = function() {
   }
         //document.write('<a href="' + blobURL + '">' + blobURL + '</a>');
     };
-    mediaRecorder.start(500);
+    mediaRecorder.start(300);
 }
 
 function onMediaError(e) {
