--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <style>
-    html, body {
-        margin: 0!important;
-        padding: 0!important;
-        overflow: hidden!important;
-        width: 100%;
-    }
+  html, body {
+    margin: 0!important;
+    padding: 0!important;
+    overflow: hidden!important;
+    width: 100%;
+  }
 </style>
 <html>
 <body>
@@ -28,101 +28,101 @@
 <script src="https://cdn.webrtc-experiment.com/MediaStreamRecorder.js"> </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
 <script>
-document.getElementById("demo").innerHTML = "Hello JavaScript!";
-// Create a client instance
-client = new Paho.MQTT.Client("kisradev.com", Number(1884), "/ws", "clientId1");
+    document.getElementById("demo").innerHTML = "Hello JavaScript!";
+    // Create a client instance
+    client = new Paho.MQTT.Client("kisradev.com", Number(1884), "/ws", "clientId1");
 
-// set callback handlers <video controls autoplay></video>
-client.onConnectionLost = onConnectionLost;
-client.onMessageArrived = onMessageArrived;
+    // set callback handlers <video controls autoplay></video>
+    client.onConnectionLost = onConnectionLost;
+    client.onMessageArrived = onMessageArrived;
 
-// connect the client
-client.connect({onSuccess:onConnect,
-	userName : "robotKs1",
-	password : "123456789",
-	useSSL: false
-	});
+    // connect the client
+    client.connect({onSuccess:onConnect,
+        userName : "robotKs1",
+        password : "123456789",
+        useSSL: false
+    });
 
 
-// called when the client connects
-function onConnect() {
-  // Once a connection has been made, make a subscription and send a message.
-  console.log("onConnect");
-  client.subscribe("World");
-  client.subscribe("/video");
-  message = new Paho.MQTT.Message("Hello");
-  message.destinationName = "World";
-  client.send(message);
-}
+    // called when the client connects
+    function onConnect() {
+        // Once a connection has been made, make a subscription and send a message.
+        console.log("onConnect");
+        client.subscribe("World");
+        client.subscribe("/video");
+        message = new Paho.MQTT.Message("Hello");
+        message.destinationName = "World";
+        client.send(message);
+    }
 
-// called when the client loses its connection
-function onConnectionLost(responseObject) {
-  if (responseObject.errorCode !== 0) {
-    console.log("onConnectionLost:"+responseObject.errorMessage);
-  }
-}
+    // called when the client loses its connection
+    function onConnectionLost(responseObject) {
+        if (responseObject.errorCode !== 0) {
+            console.log("onConnectionLost:"+responseObject.errorMessage);
+        }
+    }
 
-// called when a message arrives
-function onMessageArrived(message) {
-  console.log("onMessageArrived:"+message.payloadString);
-  console.log("topic:"+message.destinationName);
-  if(message.destinationName == "World"){
-  document.getElementById("demo").innerHTML = message.payloadString;
-  }else {
-  document.getElementById("vi").src = message.payloadString;
-  }
-}
+    // called when a message arrives
+    function onMessageArrived(message) {
+        console.log("onMessageArrived:"+message.payloadString);
+        console.log("topic:"+message.destinationName);
+        if(message.destinationName == "World"){
+            document.getElementById("demo").innerHTML = message.payloadString;
+        }else {
+            document.getElementById("vi").src = message.payloadString;
+        }
+    }
 
-// audio
-var mediaConstraints = {
-    audio: true,
-    video: true
-};
-
-navigator.getUserMedia(mediaConstraints, onMediaSuccess, onMediaError);
-
-function onMediaSuccess(stream) {
-    var mediaRecorder = new MediaStreamRecorder(stream);
-    mediaRecorder.mimeType = 'video/mp4';
-	mediaRecorder.videoWidth  = 320;
-mediaRecorder.videoHeight = 240;
-    mediaRecorder.ondataavailable = function (blob) {
-        // POST/PUT "Blob" using FormData/XHR2
-        var blobURL = URL.createObjectURL(blob);
-		var reader = new FileReader();
-reader.readAsDataURL(blob); 
-reader.onloadend = function() {
-    base64data = reader.result;                
-    //console.log(base64data );
-	message = new Paho.MQTT.Message(base64data);
-  message.destinationName = "/video";
-  client.send(message);
-  console.log(bytesToSize(blob.size));
-  document.getElementById("vii").src = base64data;
-  console.log("sending");
-  //mediaRecorder.pause();
-  //console.log(base64data);
-  }
-        //document.write('<a href="' + blobURL + '">' + blobURL + '</a>');
+    // audio
+    var mediaConstraints = {
+        audio: true,
+        video: true
     };
-    mediaRecorder.start(1000);
-}
 
-function onMediaError(e) {
-    console.error('media error', e);
-}
-function bytesToSize(bytes) {
-                var k = 1000;
-                var sizes = ['Bytes', 'KB', 'MB', 'GB', 'TB'];
-                if (bytes === 0) return '0 Bytes';
-                var i = parseInt(Math.floor(Math.log(bytes) / Math.log(k)), 10);
-                return (bytes / Math.pow(k, i)).toPrecision(3) + ' ' + sizes[i];
-            } 
+    navigator.getUserMedia(mediaConstraints, onMediaSuccess, onMediaError);
+
+    function onMediaSuccess(stream) {
+        var mediaRecorder = new MediaStreamRecorder(stream);
+        mediaRecorder.mimeType = 'video/mp4';
+        mediaRecorder.videoWidth  = 320;
+        mediaRecorder.videoHeight = 240;
+        mediaRecorder.ondataavailable = function (blob) {
+            // POST/PUT "Blob" using FormData/XHR2
+            // var blobURL = URL.createObjectURL(blob);
+            var reader = new FileReader();
+            reader.readAsDataURL(blob);
+            reader.onloadend = function() {
+                base64data = reader.result;
+                //console.log(base64data );
+                message = new Paho.MQTT.Message(base64data);
+                message.destinationName = "/video";
+                client.send(message);
+                console.log(bytesToSize(blob.size));
+                // document.getElementById("vii").src = base64data;
+                console.log("sending");
+                //mediaRecorder.pause();
+                //console.log(base64data);
+            }
+            //document.write('<a href="' + blobURL + '">' + blobURL + '</a>');
+        };
+        mediaRecorder.start(300);
+    }
+
+    function onMediaError(e) {
+        console.error('media error', e);
+    }
+    function bytesToSize(bytes) {
+        var k = 1000;
+        var sizes = ['Bytes', 'KB', 'MB', 'GB', 'TB'];
+        if (bytes === 0) return '0 Bytes';
+        var i = parseInt(Math.floor(Math.log(bytes) / Math.log(k)), 10);
+        return (bytes / Math.pow(k, i)).toPrecision(3) + ' ' + sizes[i];
+    }
 </script>
 
 <noscript>Sorry, your browser does not support JavaScript!</noscript>
 
 <p>A browser without support for JavaScript will show the text written inside the noscript element.</p>
- 
+
 </body>
 </html>
