--- a/index.html
+++ b/index.html
@@ -94,11 +94,15 @@
         var mediaRecorder = new MediaStreamRecorder(stream);
         mediaRecorder.mimeType = 'video/mp4';
         // force webp based webm encoder on all browsers
-        mediaRecorder.recorderType = WhammyRecorder;
+        // mediaRecorder.recorderType = WhammyRecorder;
         // only chrome---whilst using WhammyRecorder
-        mediaRecorder.quality = .5;
-        mediaRecorder.videoWidth  = 320;
-        mediaRecorder.videoHeight = 240;
+        // mediaRecorder.quality = .5;
+        mediaRecorder.canvas = {
+            width: 320,
+            height: 240
+        };
+        // mediaRecorder.videoWidth  = 320;
+        // mediaRecorder.videoHeight = 240;
         mediaRecorder.ondataavailable = function (blob) {
             // POST/PUT "Blob" using FormData/XHR2
             // var blobURL = URL.createObjectURL(blob);
