debug get value bug

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 var mid = document.getElementById("myId").value;
                 microgear.publish("/video/temp/"+mid,mySinnal, true);
                 console.log("publish to /video/temp/"+mid);
+                console.log("data length"+mySinnal.length);
                 send = true;
             }
 		},2000);
