--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             if (mySinnal !== '' && send === false) {
                 var mid = document.getElementById("myId").value;
                 microgear.publish("/video/temp/"+mid,mySinnal, true);
-                console.log("publish to /video/temp/"+mid);
+                console.log("publish to /video/temp/1");
                 console.log("data length"+mySinnal.length);
                 send = true;
             }
